--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8"></meta>
-	<link rel="stylesheet" type="text/css" href="style.css"></link>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	<link rel="stylesheet" type="text/css" href="style.css"></link><!--css_connection-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><!--resposivity-->
 
-<link rel="shortcut icon" type="image/png" href="http://mysite.com/favicon.ico" sizes="16x16"/>
+<link rel="shortcut icon" type="image/png" href="http://mysite.com/favicon.ico" sizes="16x16"/><!--FAVICON-->
 <link rel="manifest" href="/manifest.json"/>
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
 <meta name="theme-color" content="#ffffff"/>
@@ -14,7 +14,19 @@
 
 </head>
 	<body>
-
+		<header>
+			<h2>CSS for those who knows nothing about Cascading Style Sheet ..... for now.</h2>
+		</header>
+		<table>
+			<tr>
+				<th scope="col">Must to know</th>  <th scope="col">Must to have</th>  <th scope="col">Must to do</th>
+			</tr>
+			<tr>
+				<td scope="row">Css works only with/for HTML</td>
+				<td scope="row">Must to have</td>
+				<td scope="row">Must to do</td>
+			</tr>
+		</table>
 
 
 
