--- a/index.html
+++ b/index.html
@@ -22,13 +22,44 @@
 				<th scope="col">Must to know</th>  <th scope="col">Must to have</th>  <th scope="col">Must to do</th>
 			</tr>
 			<tr>
-				<td scope="row">Css works only with/for HTML</td>
+				<td scope="row">CSS works only with / for HTML<br><br>
+					Connection CSS code with HTML code (palced between "head" tags): <br>		<strong class="conn"><"link href="style.css" rel="stylesheet" media="all" type="text/css"></strong><br><br>
+
+					</head>
+					CSS structure:
+					<strong class="sel">sélecteur</strong>
+					<strong class="bra">{</strong>
+					<strong class="prop">propriété:</strong>
+
+					<strong class="val">valeur</strong>
+					<strong class="semi">;</strong>
+					<strong class="bra">}</strong>       //       each character is <strong class="imp">importrant !!!</strong><br><br>
+
+					Style defined <strong class="imp">at last</strong> the tree-code has the <strong class="imp">priority</strong><br><br>
+
+					Responsiveness = fluid layout is defined in the CSS code:<br>
+
+					<strong class="med">@media screen and (min-width: 480px){body{color: green;}}</strong><br>
+					   // that's the break-point for smatr-phones in landscape mode<br><br>
+
+					- separate conditions for separate devices must be defined (smartphones / tablets / computers)<br><br>
+
+					Relationship between media screen in CSS and HTML:<br>
+					<strong class="conn">	<"meta name="viewport" content="width=device-width, initial-scale=1.0""></meta></strong>
+
+
+
+				</td>
+				<br>
 				<td scope="row">Must to have</td>
 				<td scope="row">Must to do</td>
 			</tr>
 		</table>
 
+		<h3>For stubborn:</h3>
+		<ul>
 
+		</ul>
 
 
 
