--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					Responsiveness = fluid layout is defined in the CSS code:<br>
 
 					<strong class="med">@media screen and (min-width: 480px){body{color: green;}}</strong><br>
-					   // that's the break-point for smatr-phones in landscape mode<br><br>
+					   // that's the break-point for smart-phones in landscape mode<br><br>
 
 					- separate conditions for separate devices must be defined (smartphones / tablets / computers)<br><br>
 
@@ -54,12 +54,16 @@
 				<td scope="row">Must to have</td>
 				<td scope="row">Must to do</td>
 			</tr>
-		</table>
+		</table><br>
 
 		<h3>For stubborn:</h3>
-		<ul>
 
-		</ul>
+<ul>
+				<li><a href="https://openclassrooms.com/courses/build-your-website-with-html5-and-css3" target="blank">CSS videos</a></li>
+				<li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started" target="blank">Getting started with Css</a></li>
+				<li><a href="http://www.w3schools.com/cssref/" target="blank">Css with W3C</a></li>
+</ul>
+
 
 
 
