content_table_padding

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 			<h2>CSS for those who knows nothing about Cascading Style Sheet ..... for now.</h2>
 		</header>
 		<table>
+			<thead>
 			<tr>
 				<th scope="col">Must to know</th>  <th scope="col">Must to have</th>  <th scope="col">Must to do</th>
 			</tr>
+			</thead>
+			<tbody>
 			<tr>
 				<td scope="row">CSS works only with / for HTML<br><br>
 					Connection CSS code with HTML code (palced between "head" tags): <br>		<strong class="conn"><"link href="style.css" rel="stylesheet" media="all" type="text/css"></strong><br><br>
@@ -54,6 +57,7 @@
 				<td scope="row">Must to have</td>
 				<td scope="row">Must to do</td>
 			</tr>
+			</tbody>
 		</table><br>
 
 		<h3>For stubborn:</h3>
