--- a/index.html
+++ b/index.html
@@ -56,8 +56,21 @@
 									<strong class="conn">	<"meta name="viewport" content="width=device-width, initial-scale=1.0""></meta></strong>
 
 
-									<td scope="row">Learn / practice english - the best informations are on the English-language websites<br>
-
+									<td scope="row">Learn / practice english = the best informations are on the <strong class="eng">English</strong><b>-</b><strong class="lang">language</strong> websites
+									<br>
+									<br>
+									Find good sources = begin with those on intern link <a href="#stub">For stubborns:</a>
+									<br>
+									<br>
+									<br>
+									Practice method: <strong class="imm"> total immersion </strong> = I recomend the Simplon training <a href="http://simplon.co/roubaix/">Simplon</a>
+									<br>
+									<br>
+									Find = download a good text editor <a href="http://www.skilledup.com/articles/best-html-editors">Text editors</a>
+									<br>
+									<br>
+									<br>
+									Get the familiar with the principle: <strong class="lang">L e a r n i n g    b y    d  o i n g</strong>
 									</td>
 							</td>
 						</tr>
@@ -65,7 +78,7 @@
 				</table>
 				<br>
 
-				<h3>For stubborn:</h3>
+				<h3 id="stub">For stubborns:</h3>
 
 					<ul>
 						<li><a href="https://openclassrooms.com/courses/build-your-website-with-html5-and-css3" target="blank">CSS videos</a></li>
