--- a/index.html
+++ b/index.html
@@ -1,90 +1,98 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<meta charset="utf-8"></meta>
-			<link rel="stylesheet" type="text/css" href="style.css"></link><!--C S S _connection-->
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><!--R E S P O N S I V I T Y-->
-			<link rel="shortcut icon" type="image/png" href="http://mysite.com/favicon.ico" sizes="16x16"/><!--FAVICON-->
-			<link rel="manifest" href="/manifest.json"/><!--FAVICON-->
-			<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/><!--FAVICON-->
-			<meta name="theme-color" content="#ffffff"/><!--FAVICON-->
-
-			<title>css cheat sheet</title>
-		</head>
-
-		<body>
-			<header>
+<html lang="fr">
+<!--========================================= H E A D == on ================================================== -->
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+	<head>
+		<meta charset="utf-8"></meta>
+<!--________________________________________ T i t le  _______________________________________________________-->
+		<title>css cheat sheet</title>
+<!--________________________________________ C S S connection ________________________________________________ -->
+		<link rel="stylesheet" type="text/css" href="style.css"></link>
+<!--________________________________________ R E S P O N S I V I T Y _________________________________________ -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+<!--________________________________________ F A V I C O N ___________________________________________________ -->
+		<link rel="shortcut icon" type="image/png" href="http://mysite.com/favicon.ico" sizes="16x16"/>
+		<link rel="manifest" href="/manifest.json"/>
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
+		<meta name="theme-color" content="#ffffff"/>
+	</head>
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+<!--======================================= H E A D == ff ==================================================== -->
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+<!--======================================= B O D Y == on ==================================================== -->
+<!--"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" -->
+	<body>
+<!--======================================= H E A D E R == on ================================================ -->
+		<header>
 				<h2>CSS for those who knows nothing about Cascading Style Sheet ..... for now.</h2>
-			</header>
-				<table>
-					<thead>
-						<tr class="header1">
-							<th scope="col">Must to know</th><th scope="col">Must to do</th>
-						</tr>
-					</thead><!--W A R N I N G !!!  close the T A G corectly -->
+		</header>
+<!--======================================= H E A D E R == off =============================================== -->
+		<table>
+			<thead>
+				<tr class="header1">
+					<th scope="col">Must to know</th><th scope="col">Must to do</th>
+				</tr>
+			</thead><!--W A R N I N G !!!  close the T A G corectly -->
 
-					<tbody>
-						<tr>
-							<td scope="row">CSS works only with / for HTML<br><br>
-								Connection CSS code with HTML code (palced between "head" tags): <br>		<strong class="conn"><"link href="style.css" rel="stylesheet" media="all" type="text/css"></strong>
-								<br>
-								<br>
-								CSS structure:
-								<strong class="sel">sélecteur</strong>
-								<strong class="bra">{</strong>
-								<strong class="prop">propriété:</strong>
+			<tbody>
+				<tr>
+					<td scope="row">CSS works only with / for HTML<br><br>
+					Connection CSS code with HTML code (palced between "head" tags): <br>		<strong class="conn"><"link href="style.css" rel="stylesheet" media="all" type="text/css"></strong>
+					<br>
+					<br>
+					CSS structure:
+					<strong class="sel">sélecteur</strong>
+					<strong class="bra">{</strong>
+					<strong class="prop">propriété:</strong>
 
-								<strong class="val">valeur</strong>
-								<strong class="semi">;</strong>
-								<strong class="bra">}</strong>       //       each character is <strong class="imp">importrant !!!</strong>
-								<br>
-								<br>
-								Style defined <strong class="imp">at last</strong> the tree-code has the <strong class="imp">priority</strong>
-								<br>
-								<br>
-								Responsiveness = fluid layout is defined in the CSS code:<br>
+					<strong class="val">valeur</strong>
+					<strong class="semi">;</strong>
+					<strong class="bra">}</strong>       //       each character is <strong class="imp">importrant !!!</strong>
+					<br>
+					<br>
+					Style defined <strong class="imp">at last</strong> the tree-code has the <strong class="imp">priority</strong>
+					<br>
+					<br>
+					Responsiveness = fluid layout is defined in the CSS code:<br>
+					<strong class="med">@media screen and (min-width: 480px){body{color: green;}}</strong><br>
+					 // that's the break-point for smart-phones in landscape mode
+					 <br>
+					 <br>
+					 - separate conditions for separate devices must be defined (smartphones / tablets / computers)
+					 <br>
+					 <br>
+						Relationship between media screen in CSS and HTML:<br>
+						<strong class="conn">	<"meta name="viewport" content="width=device-width, initial-scale=1.0""></meta></strong>
+						<td scope="row">Learn / practice english = the best informations are on the <strong class="eng">English</strong><b>-</b><strong class="lang">language</strong> websites
+						<br>
+						<br>
+						Find good sources = begin with those on intern link <a href="#stub">For stubborns:</a>
+						<br>
+						<br>
+						<br>
+						Practice method: <strong class="imm"> total immersion </strong> = I recomend the Simplon training <a href="http://simplon.co/roubaix/">Simplon</a>
+						<br>
+						<br>
+						Find = download a good text editor <a href="http://www.skilledup.com/articles/best-html-editors">Text editors</a>
+						<br>
+						<br>
+						<br>
+						Get the familiar with the principle: <strong class="lear">Learning by doing</strong>
+						</td>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<br>
 
-								<strong class="med">@media screen and (min-width: 480px){body{color: green;}}</strong><br>
-								   // that's the break-point for smart-phones in landscape mode
-									 <br>
-									 <br>
-									 - separate conditions for separate devices must be defined (smartphones / tablets / computers)
-									 <br>
-									 <br>
-
-									Relationship between media screen in CSS and HTML:<br>
-									<strong class="conn">	<"meta name="viewport" content="width=device-width, initial-scale=1.0""></meta></strong>
-
-
-									<td scope="row">Learn / practice english = the best informations are on the <strong class="eng">English</strong><b>-</b><strong class="lang">language</strong> websites
-									<br>
-									<br>
-									Find good sources = begin with those on intern link <a href="#stub">For stubborns:</a>
-									<br>
-									<br>
-									<br>
-									Practice method: <strong class="imm"> total immersion </strong> = I recomend the Simplon training <a href="http://simplon.co/roubaix/">Simplon</a>
-									<br>
-									<br>
-									Find = download a good text editor <a href="http://www.skilledup.com/articles/best-html-editors">Text editors</a>
-									<br>
-									<br>
-									<br>
-									Get the familiar with the principle: <strong class="lang">L e a r n i n g    b y    d  o i n g</strong>
-									</td>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<br>
-
-				<h3 id="stub">For stubborns:</h3>
-
-					<ul>
-						<li><a href="https://openclassrooms.com/courses/build-your-website-with-html5-and-css3" target="blank">CSS videos</a></li>
-						<li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started" target="blank">Getting started with Css</a></li>
-						<li><a href="http://www.w3schools.com/cssref/" target="blank">Css with W3C</a></li>
-					</ul>
-				</table>
-			</body>
-	</html>
+		<h3 id="stub">For stubborns:</h3>
+			<ul>
+				<li><a href="https://openclassrooms.com/courses/build-your-website-with-html5-and-css3" target="blank">CSS videos</a></li>
+				<li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started" target="blank">Getting started with Css</a></li>
+				<li><a href="http://www.w3schools.com/cssref/" target="blank">Css with W3C</a></li>
+			</ul>
+		</table>
+	</body>
+</html>
